set tests to bail on first failure

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "type": "module",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --bail"
   },
   "keywords": [],
   "author": "",
