--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,3 +29,15 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    - name: Codecov
+      # You may pin to the exact commit or the version.
+      # uses: codecov/codecov-action@f32b3a3741e1053eb607407145bc9619351dc93b
+      uses: codecov/codecov-action@v2.1.0
+      with:
+        # Flag upload to group coverage metrics (e.g. unittests | integration | ui,chrome)
+        flags: ${{ matrix.node-version }}
+        # Specify whether or not CI build should fail if Codecov runs into an error during upload
+        fail_ci_if_error: true
+        # Comma-separated list, see the README for options and their usage
+        # Specify whether the Codecov output should be verbose
+        verbose: true
