--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "devDependencies": {
+    "@types/mocha": "^9.0.0",
     "@types/node": "16.11.19",
     "c8": "7.11.0",
-    "mocha": "9.1.3"
+    "mocha": "9.1.3",
+    "typescript": "^4.5.4"
   },
   "type": "module",
   "scripts": {
